experiments/rust_test_output.log
   Compiling tokio v1.49.0
   Compiling tokio-util v0.7.18
   Compiling tokio-native-tls v0.3.1
   Compiling tokio-rustls v0.24.1
   Compiling tokio-stream v0.1.18
   Compiling h2 v0.3.27
   Compiling tokio-test v0.4.5
   Compiling hyper v0.14.32
   Compiling hyper-rustls v0.24.2
   Compiling hyper-tls v0.5.0
   Compiling reqwest v0.11.27
   Compiling performer v0.1.0 (/tmp/gh-issue-solver-1768781214133/52_performer_efficient_attention/rust)
warning: method `get_encoding` is never used
   --> src/model/embedding.rs:116:12
    |
 75 | impl PositionalEncoding {
    | ----------------------- method in this implementation
...
116 |     pub fn get_encoding(&self, pos: usize) -> Option<ndarray::ArrayView1<f64>> {
    |            ^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: struct `LearnablePositionalEmbedding` is never constructed
   --> src/model/embedding.rs:127:12
    |
127 | pub struct LearnablePositionalEmbedding {
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: associated items `new`, `forward`, `embeddings`, and `set_embeddings` are never used
   --> src/model/embedding.rs:138:12
    |
136 | impl LearnablePositionalEmbedding {
    | --------------------------------- associated items in this implementation
137 |     /// Create learnable positional embedding
138 |     pub fn new(d_model: usize, max_len: usize) -> Self {
    |            ^^^
...
151 |     pub fn forward(&self, x: &Array3<f64>) -> Array3<f64> {
    |            ^^^^^^^
...
169 |     pub fn embeddings(&self) -> &Array2<f64> {
    |            ^^^^^^^^^^
...
174 |     pub fn set_embeddings(&mut self, embeddings: Array2<f64>) {
    |            ^^^^^^^^^^^^^^

warning: field `dropout` is never read
  --> src/model/performer.rs:30:5
   |
12 | pub struct PerformerEncoderLayer {
   |            --------------------- field in this struct
...
30 |     dropout: f64,
   |     ^^^^^^^
   |
   = note: `PerformerEncoderLayer` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis

warning: hiding a lifetime that's elided elsewhere is confusing
   --> src/model/embedding.rs:116:25
    |
116 |     pub fn get_encoding(&self, pos: usize) -> Option<ndarray::ArrayView1<f64>> {
    |                         ^^^^^                        ^^^^^^^^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
    |                         |
    |                         the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
    = note: `#[warn(mismatched_lifetime_syntaxes)]` on by default
help: use `'_` for type paths
    |
116 |     pub fn get_encoding(&self, pos: usize) -> Option<ndarray::ArrayView1<'_, f64>> {
    |                                                                          +++

warning: unused import: `super::*`
   --> src/api/client.rs:296:9
    |
296 |     use super::*;
    |         ^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Features`
   --> src/model/performer.rs:314:35
    |
314 |     use crate::data::{DataLoader, Features};
    |                                   ^^^^^^^^

warning: `performer` (lib) generated 5 warnings (run `cargo fix --lib -p performer` to apply 1 suggestion)
error[E0432]: unresolved import `performer::strategy::SignalGeneratorConfig`
 --> examples/backtest.rs:8:5
  |
8 | use performer::strategy::SignalGeneratorConfig;
  |     ^^^^^^^^^^^^^^^^^^^^^---------------------
  |     |                    |
  |     |                    help: a similar name exists in the module: `SignalGenerator`
  |     no `SignalGeneratorConfig` in `strategy`

error[E0308]: mismatched types
  --> examples/train.rs:95:33
   |
95 |         .filter(|(p, t)| (*p >= 0.0) == (**t >= 0.0))
   |                                 ^^^ expected `&f64`, found floating-point number
   |
help: consider dereferencing the borrow
   |
95 |         .filter(|(p, t)| (**p >= 0.0) == (**t >= 0.0))
   |                           +

For more information about this error, try `rustc --explain E0432`.
error: could not compile `performer` (example "backtest") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
For more information about this error, try `rustc --explain E0308`.
error: could not compile `performer` (example "train") due to 1 previous error
warning: methods `embeddings` and `set_embeddings` are never used
   --> src/model/embedding.rs:169:12
    |
136 | impl LearnablePositionalEmbedding {
    | --------------------------------- methods in this implementation
...
169 |     pub fn embeddings(&self) -> &Array2<f64> {
    |            ^^^^^^^^^^
...
174 |     pub fn set_embeddings(&mut self, embeddings: Array2<f64>) {
    |            ^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `performer` (lib test) generated 5 warnings (2 duplicates) (run `cargo fix --lib -p performer --tests` to apply 2 suggestions)
